# Infore_projects

./: README.md
apriltagnav/: README.md
apriltagnav/apriltag/: CMakeLists.txt
apriltagnav/apriltag_coord/: CMakeLists.txt  package.xml
apriltagnav/apriltag_coord/config/: laser_filter.yaml
apriltagnav/apriltag_coord/include/: markerVis.h  obstacleDetect.h
apriltagnav/apriltag_coord/src/: coor_viz.cpp  markerVis.cpp  obstacleDetect.cpp  pose_publisher_quat.cpp  pose_publisher_trig.cpp
apriltagnav/apriltag_ros/: CMakeLists.txt  package.xml
apriltagnav/apriltag_ros/config/: tags.yaml
apriltagnav/apriltag_ros/launch/: continuous_detection.launch  detect.launch
apriltagnav/apriltag_ros/src/: continuous_detector.cpp
laser_stickwall/: README.md
obstacledet/: CMakeLists.txt  README.md  package.xml  rviz_plugins.xml
obstacledet/config/: laser_filter.yaml
obstacledet/include/: common.h  ground_seg.h  obstacle.h  obstacle_reg.h  rgbd_proc.h
obstacledet/include/displays/: circle_visual.h  obstacles_display.h  segment_visual.h
obstacledet/include/utilities/: circle.h  figure_fitting.h  math_utilities.h  point.h  point_set.h  segment.h  tracked_obstacle.h
obstacledet/launch/: detect.launch  obstacle_rgbd_cam.launch  obstacle_rgbd_cam_both.launch  obstacle_rgbd_cam_id1.launch  obstacle_rgbd_cam_id2.launch
obstacledet/msg/: Obstacles.msg
obstacledet/src/: ground_seg.cpp  obstacle.cpp  obstacle_reg.cpp  rgbd_proc.cpp
obstacledet/src/displays/: circle_visual.cpp  obstacles_display.cpp  segment_visual.cpp
psdet/: CMakeLists.txt  README.md  package.xml
psdet/include/: .PSDetLB.h.swp  PSDetLB.h  deduction.h  inference.h  logging.h  macros.h  utils.h  yololayer.h
psdet/launch/: PSDetLB.launch
psdet/src/: PSDetLB.cpp  PSDetLB_node.cpp  deduction.cpp  inference.cpp
rtspstream2ros/: CMakeLists.txt  README.md  package.xml
rtspstream2ros/include/: common.h  retrieve.h
rtspstream2ros/launch/: stream.launch
rtspstream2ros/src/: retrieve.cpp  stream_node.cpp
sidetrack-pytorch/: README.md
sidetrack-pytorch/configs/: cityscapes_fast_scnn.yaml
sidetrack-pytorch/segmentron/config/: settings.py
sidetrack-pytorch/segmentron/data/dataloader/: cityscapes.py  cityscapes_lane.py
sidetrack-pytorch/segmentron/data/downloader/: cityscapes.py
sidetrack-pytorch/segmentron/models/: fast_scnn.py  model_zoo.py
sidetrack-pytorch/segmentron/utils/: options.py  score.py  visualize.py
sidetrack-pytorch/tools/: eval.py  line.py  line_fit.py  train.py
sidetrack-trt/: CMakeLists.txt  README.md  package.xml
sidetrack-trt/include/: common.h  side_lane_detect.h
sidetrack-trt/launch/: front.launch
sidetrack-trt/msg/: front_msgs.msg
sidetrack-trt/src/: front_node.cpp  side_lane_detect.cpp
