<?xml version="1.0"?>
<package format="2">
    <name>obstacle_det</name>
    <version>1.0.0</version>
    <description>Obstacle Detection with RGB-D camera and laser data.</description>
    <maintainer email="sheldonvon@outlook.com">sv</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>message_generation</build_depend>
    <exec_depend>message_runtime</exec_depend>
  
    <depend>pcl_ros</depend>

    <depend>tf</depend>
    <depend>rviz</depend>
    <depend>roscpp</depend>
    <depend>roslaunch</depend>
    <depend>nodelet</depend>
    <depend>std_msgs</depend>
    <depend>std_srvs</depend>
    <depend>sensor_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>laser_geometry</depend>

    <export>
      <rviz plugin="${prefix}/rviz_plugins.xml"/>
    </export>

</package>