<package format="2">
    <name>side_track</name>
    <version>1.0.0</version>
    <description>Side Track</description>
    <maintainer email="sheldonvon@outlook.com">sv</maintainer>
    <license>BSD</license>
    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>message_generation</build_depend>
    <build_export_depend>message_generation</build_export_depend>
    <exec_depend>message_runtime</exec_depend>
</package>