<?xml version="1.0"?>
<package>
  <name>apriltag_coord</name>
  <version>1.0.0</version>
  <description>
    Publish coordinate with apriltag
  </description>

  <maintainer email="sheldonvon@outlook.com">Sheldon Von</maintainer>
  <author>Sheldon Von</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- <build_depend>apriltag</build_depend> -->
  <build_depend>apriltag_ros</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>libopencv-dev</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>common_msgs</build_depend>
  
  <run_depend>tf</run_depend>
  <run_depend>apriltag_ros</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>image_geometry</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>eigen</run_depend>
  <run_depend>libopencv-dev</run_depend>

</package>
